[tool.poetry]
name = "mqtt-chat"
version = "1.0.0"
description = "A text chat using paho-mqtt"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = "^3.13"
paho-mqtt = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
